package org.home.design.atm;

public class ATMLoginValidator {
}
