package org.home.design.atm;

public class AtmSystem {
}
