package org.home.design.atm;

public class AuthenticationInputInfo {
    private String cardNo;
    private String pin;
    private String screenInput;

    public String getCardNo() {
        return cardNo;
    }

    public void setCardNo(String cardNo) {
        this.cardNo = cardNo;
    }

    public String getPin() {
        return pin;
    }

    public void setPin(String pin) {
        this.pin = pin;
    }

    public String getScreenInput() {
        return screenInput;
    }

    public void setScreenInput(String screenInput) {
        this.screenInput = screenInput;
    }
}
