package org.home.design.atm;

public class AuthenticatorService {
    public void authenticateUser(){

    }
}
