package org.home.design.atm;

public interface InputReader {

    public String read();
}
