@startuml

title __ATM's Class Diagram__\n

  package  {
    package org.home {
      package org.home.design.atm {
        class ATMInputReader {
            + readLoginInfo()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class ATMLoginValidator {
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class AtmSystem {
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class AuthenticationInputInfo {
            - cardNo : String
            - pin : String
            - screenInput : String
            + getCardNo()
            + setCardNo()
            + getPin()
            + setPin()
            + getScreenInput()
            + setScreenInput()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class AuthenticatorService {
            + authenticateUser()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class CardReader {
            + read()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        interface InputReader {
            {abstract} + read()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class KeyPadInputReader {
            + read()
        }
      }
    }
  }
  

  package  {
    package org.home {
      package org.home.design.atm {
        class ScreenInputReader {
            + read()
        }
      }
    }
  }
  

  ATMInputReader o-- ScreenInputReader : screenInputReader
  ATMInputReader o-- KeyPadInputReader : keyPadInputReader
  ATMInputReader o-- CardReader : cardReader
  CardReader -up-|> InputReader
  KeyPadInputReader -up-|> InputReader
  ScreenInputReader -up-|> InputReader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
